--- a/src/index.css
+++ b/src/index.css
@@ -3,42 +3,57 @@
 @tailwind utilities;
 
 *::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px #1a2128;
-	border-radius: 10px;
-	background-color: #080c0f;
+  -webkit-box-shadow: inset 0 0 6px #1a2128;
+  border-radius: 10px;
+  background-color: #080c0f;
 }
 
 *::-webkit-scrollbar {
-	width: 6px !important;
-	height: 6px !important;
-	background-color: #080c0f !important;
+  width: 6px !important;
+  height: 6px !important;
+  background-color: #080c0f !important;
 }
 
 *::-webkit-scrollbar-thumb {
-	border-radius: 10px !important;
-	-webkit-box-shadow: inset 0 0 6px #1a2128 !important;
-	@apply !bg-primary-100;
+  border-radius: 10px !important;
+  -webkit-box-shadow: inset 0 0 6px #1a2128 !important;
+  @apply !bg-primary-100;
 }
 
 body {
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-	overflow-y: auto;
-	@apply bg-white text-black;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  overflow-y: auto;
+  @apply bg-white text-black;
 }
 
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	user-select: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 h1 {
-	@apply font-bold text-xl md:text-3xl;
+  @apply font-bold text-xl md:text-3xl;
+}
+
+h2 {
+  @apply font-bold text-lg md:text-2xl;
+}
+
+h3 {
+  @apply font-bold text-base md:text-xl;
+}
+
+h4 {
+  @apply font-bold text-sm md:text-lg;
 }
 
 p {
-	@apply text-xs md:text-lg;
+  @apply text-sm md:text-base;
+}
+
+p.small {
+  @apply text-xs md:text-sm;
 }
