--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@
   background-color: #080c0f !important;
 }
 
+
+
 *::-webkit-scrollbar-thumb {
   border-radius: 10px !important;
   -webkit-box-shadow: inset 0 0 6px #1a2128 !important;
@@ -29,6 +31,8 @@ body {
 }
 
 * {
+  font-family: "peyda" !important;
+  word-spacing: 2px;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -48,6 +52,10 @@ h3 {
 
 h4 {
   @apply font-bold text-sm md:text-lg;
+}
+
+h5 {
+  @apply font-bold text-xs md:text-base;
 }
 
 p {
